fix(styles): fix tweets overflow problem

--- a/app/styles/page-chrome.css
+++ b/app/styles/page-chrome.css
@@ -186,7 +186,7 @@ blockquote, dl, dd, h1, h2, h3, h4, h5, h6, figure, p, pre {
 }
 
 .stream-item .content, .permalink-tweet .content {
-  padding: 0 2px;
+  padding: 0 4px;
 }
 
 .ProfileHeaderCard-screenname {
